--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -27,14 +27,14 @@ fieldset {
 
 .form-control {
     display: block;
-    width: 94%;
+    width: 90%;
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    background-color: #fff;
+    background-color: #2e2e2e;
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: .25rem;
