--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,34 @@
+.navbar__wrapper {
+    display: flex;
+    margin-top: -16px;;
+    justify-content: center;
+}
+
+
+
 .navbar {
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: left;
+    flex: auto;
+    padding: 0!important;
+    background-color: rgb(0, 0, 0);
+    justify-content: space-evenly!important;
+    margin-bottom: 0;
+    
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
+    color: white;
+    
+}
+
+.navbar__link {
+    display: flex;
+    text-decoration: none;
+    color: white;
+    font-family:'Junge', serif;
+    font-size: 23px;
+    
+    justify-content: space-evenly;
 }
