--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,3 +1,4 @@
+
 .navbar__wrapper {
     display: flex;
     margin-top: -16px;;
@@ -9,10 +10,12 @@
 .navbar {
     display: flex;
     flex: auto;
-    padding: 0!important;
-    background-color: rgb(0, 0, 0);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(49, 49, 49);
     justify-content: space-evenly!important;
     margin-bottom: 0;
+    margin-top: 16px;
     
 }
 
@@ -20,6 +23,7 @@
     flex-basis: 20%;
     list-style-type: none;
     color: white;
+    font-size: 23px;
     
 }
 
@@ -27,7 +31,7 @@
     display: flex;
     text-decoration: none;
     color: white;
-    font-family:'Junge', serif;
+    font-family: 'Racing Sans One', 'Junge', serif;
     font-size: 23px;
     
     justify-content: space-evenly;
