--- a/src/components/series/series.css
+++ b/src/components/series/series.css
@@ -6,12 +6,20 @@
     margin-top: 20px;
 }
 
+.Series_header {
+    display: flex;
+    background-color: black;
+    padding-bottom: 5px;
+    justify-content: center;
+}
+
+
 .series_card {
     display: flex;
     flex-direction: column;
     align-items: inherit;
     background-color:rgba(0, 0, 0, 0.9);
-    font-size: 14px;
+    font-size: 12px;
     color: white;
     text-shadow: 1px 1px rgb(0, 0, 0);
     margin-top: 20px;
@@ -19,6 +27,15 @@
     border-radius: 10px;
     text-align: center;
     text-size-adjust: inherit;
+}
+
+.series_title {
+    display: flex;
+    color: white;
+    font-size: 30px;
+    font-family: 'Racing Sans One', 'Junge', serif;
+    text-decoration: none;
+    justify-content: center;
 }
 
 .image_list {
