--- a/src/components/track/track.css
+++ b/src/components/track/track.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.9);
     font-size: 12px;
     color: white;
     text-shadow: 1px 1px rgb(0, 0, 0);
@@ -24,12 +24,40 @@
 .image_list {
     border-radius: 10px;
 }
+.track_list_header {
+    display: flex;
+    color: white;
+    
+    font-size: 30px;
+    font-family: 'Racing Sans One', 'Junge', serif;
+    margin-left: 28px;
+    text-decoration: none;
+    justify-content: center;
+}
 
 .track_list_name {
     display: flex;
+    color: white;
+    font-size: 12px;
+    text-decoration: none;
     justify-content: center;
 }
 
 .Page_Id {
+    display: flex;
     background-color: black;
+    justify-content: space-between;
 }
+
+.trackForm {
+    color: white;
+}
+
+.search {
+    margin-top: 10px;
+    height: 28px;
+    max-width: 96px;
+    border-radius: 30px;
+    text-align: center;
+}
+
