--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ code {
     monospace;
 } */
 @import url("https://fonts.googleapis.com/css?family=Comfortaa|Patua+One");
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap');
+
 /*Typography
 --------------------------------------------------------------*/
 
@@ -20,9 +22,8 @@ button,
 input,
 select,
 textarea {
-	color: #ffffff;
-	text-shadow: 2px 2px rgb(0, 0, 0);
-	font-family: "Comfortaa", Arial, sans-serif;
+	color: #000000;
+	font-family: 'Racing Sans One', "Comfortaa", Arial, sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 	padding: 0;
@@ -59,6 +60,10 @@ code {
 	cursor: pointer;
 	background: none !important;
 	border: none;
-	font-family: 'Junge', serif;
-	font-size: 23px;
+	font-family: 'Racing Sans One', 'Junge', serif;
+	font-size: 20px;
+}
+
+a {
+	color: white;
 }
