--- a/src/components/auth/Auth.css
+++ b/src/components/auth/Auth.css
@@ -12,12 +12,29 @@ fieldset {
 .form--login {
     display: inline-block;
     margin: 0 auto;
-    text-align: left;
+    color: white;
+    text-align: center;
 }
 
 .form--login > fieldset > input[type="email"],
 .form--login > fieldset > input[type="password"] {
-    width: 25em;
+    margin-bottom: 30px;
+}
+
+.login_header {
+    display: flex;
+    background-color: black;
+    padding-bottom: 5px;
+    margin-bottom: 225px;
+    justify-content: center;
+}
+
+.register_header {
+    display: flex;
+    background-color: black;
+    padding-bottom: 5px;
+    margin-bottom: 75px;
+    justify-content: center;
 }
 
 .label--login {
@@ -42,6 +59,24 @@ fieldset {
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
+.form_login {
+    display: block;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    height: calc(1.5em + .75rem + 2px);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #ffffff;
+    background-color: #2e2e2e;
+    background-clip: padding-box;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
+    -webkit-transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 .container--login {
     text-align: center;
 }
@@ -51,10 +86,6 @@ fieldset {
     background-position-x: center;
     /* background-image: url('./logo.png'); */
     z-index: 1;
-    min-height: 25rem;
-    min-width: 45rem;
-    padding: 0 5rem;
-    background-color: hsla(0,0%,100%,0.75);
     background-blend-mode: overlay;
     background-repeat: no-repeat;
 }
@@ -67,4 +98,9 @@ fieldset {
 .dialog {
     min-width: 15rem;
     min-height: 5rem;
+}
+
+.link--register {
+    color: white;
+    text-shadow: 2px 2px 8px rgb(0, 0, 0);
 }
