--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -11,11 +11,14 @@
     display: flex;
     flex: auto;
     padding-top: 10px;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     background-color: rgb(49, 49, 49);
     justify-content: space-evenly!important;
     margin-bottom: 0;
     margin-top: 16px;
+    position: fixed;
+  bottom: 0;
+  width: 100%;
     
 }
 
