--- a/src/components/track/form.css
+++ b/src/components/track/form.css
@@ -17,7 +17,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    font-size: 30px;
+    font-size: 24px;
     font-family: 'Racing Sans One', 'Junge', serif;
     text-shadow: 2px 2px 5px rgb(0, 0, 0);
     padding-top: 20px;
@@ -56,6 +56,8 @@
 
 .create-btn {
     margin-left: 150px;
+    margin-bottom: 100px;
     padding-top: 30px;
     padding-bottom: 20px;
+
 }
